# advent_of_fpga

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
constraints/: top.xdc
python/: compile.py  test_div.py  test_string.py  test_top.py  test_transpose.py  test_uram.py  util.py
rtl/: common.kh  core.kh  div.kh  string.kh  top.kh  transpose.kh  xilinx_uram.kh  xilinx_uram.v
test/: conftest.py  test_string.py  util.py
