[project]
name = "advent-of-fpga"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["hwl", "pytest>=9.0.2", "pytest-xdist>=3.8.0"]

[tool.uv.sources]
hwl = { path = "external/hwlang/rust/hwl_python", editable = true }

[tool.pytest.ini_options]
addopts = "--tb=short"
testpaths = ["python"]
